LS-1302 rename colors with prefix

--- a/src/Swap/styles/inputLabelTemplate.scss
+++ b/src/Swap/styles/inputLabelTemplate.scss
@@ -52,9 +52,9 @@
   }
 
   .-green {
-    color: var(--green-500);
+    color: var(--ls-green-500);
   }
   .-red {
-    color: var(--red-500);
+    color: var(--ls-red-500);
   }
 }
