--- a/src/components/ButtonToken/buttonToken.scss
+++ b/src/components/ButtonToken/buttonToken.scss
@@ -27,7 +27,7 @@
     }
 
     &.is-selected {
-      color: var(--surface-0) !important;
+      color: var(--ls-surface-0) !important;
       background: #1c1c33 !important;
       border-color: transparent !important;
 
