--- a/src/components/CurveSwitch/curveSwitch.scss
+++ b/src/components/CurveSwitch/curveSwitch.scss
@@ -30,7 +30,7 @@
       }
 
       p {
-        font-family: var(--font-family);
+        font-family: var(--ls-font-family);
         font-style: normal;
         font-weight: 500;
         font-size: 15px;
