--- a/src/components/PriceImpactWarningDialog/PriceImpactWarningDialog.scss
+++ b/src/components/PriceImpactWarningDialog/PriceImpactWarningDialog.scss
@@ -58,7 +58,7 @@
         }
       }
       &_alert {
-        background-color: var(--accent-error);
+        background-color: var(--ls-accent-error);
 
         &:hover {
           background-color: #d75050 !important;
