--- a/src/components/SelectTokenDialog/Coins/coinList.scss
+++ b/src/components/SelectTokenDialog/Coins/coinList.scss
@@ -7,7 +7,7 @@
   }
 
   .address-import {
-    background: var(--surface-card);
+    background: var(--ls-surface-card);
     width: 100%;
     display: flex;
     padding: 16px 0;
