--- a/src/components/SwapConfirm/styles/swapPreview.scss
+++ b/src/components/SwapConfirm/styles/swapPreview.scss
@@ -56,7 +56,7 @@
         margin-bottom: -18px;
         left: calc(50% - 16px);
         background-color: #24243a;
-        border: 6px solid var(--surface-card);
+        border: 6px solid var(--ls-surface-card);
         z-index: 1;
         display: flex;
         align-items: center;
