--- a/src/Swap/styles/swapContainer.scss
+++ b/src/Swap/styles/swapContainer.scss
@@ -31,7 +31,7 @@
 
     &:hover {
       .config-icon {
-        stroke: var(--primary-color);
+        stroke: var(--ls-primary-color);
       }
     }
   }
@@ -42,7 +42,7 @@
     border-radius: 24px;
     min-height: 200px;
     color: white;
-    background: var(--surface-card);
+    background: var(--ls-surface-card);
     box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px,
     rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px 32px;
     margin-bottom: 20px;
@@ -154,7 +154,7 @@
       margin-bottom: -18px;
       left: calc(50% - 16px);
       background-color: #24243a;
-      border: 6px solid var(--surface-card);
+      border: 6px solid var(--ls-surface-card);
       z-index: 1;
       display: flex;
       align-items: center;
@@ -162,7 +162,7 @@
 
       i {
         font-size: 12px;
-        color: var(--surface-400);
+        color: var(--ls-surface-400);
       }
     }
   }
