--- a/src/Swap/styles/swapInput.scss
+++ b/src/Swap/styles/swapInput.scss
@@ -109,7 +109,7 @@
       }
 
       &.is-selected {
-        color: var(--surface-0) !important;
+        color: var(--ls-surface-0) !important;
         background: #1c1c33 !important;
         border-color: transparent !important;
 
