--- a/src/components/CurveInfo/curveInfo.scss
+++ b/src/components/CurveInfo/curveInfo.scss
@@ -5,7 +5,7 @@
   }
 
   .label-text {
-    font-family: var(--font-family);
+    font-family: var(--ls-font-family);
     font-style: normal;
     font-weight: 500;
     font-size: 15px;
