--- a/src/components/InputToggle/inputToggle.scss
+++ b/src/components/InputToggle/inputToggle.scss
@@ -10,7 +10,7 @@
     left: calc(50% - 16px);
     top: -5px;
     background-color: #24243a;
-    border: 5px solid var(--surface-card);
+    border: 5px solid var(--ls-surface-card);
     z-index: 1;
     display: flex;
     align-items: center;
@@ -18,7 +18,7 @@
     i {
       position: absolute;
       font-size: 12px;
-      color: var(--surface-400);
+      color: var(--ls-surface-400);
       transition: all 0.3s ease;
       opacity: 1;
     }
