--- a/src/styles/components/curveSwitch.scss
+++ b/src/styles/components/curveSwitch.scss
@@ -29,7 +29,7 @@
         }
 
         p {
-            font-family: var(--font-family);
+            font-family: var(--ls-font-family);
             font-style: normal;
             font-weight: 500;
             font-size: 16px;
