--- a/src/Swap/styles/swapInput.scss
+++ b/src/Swap/styles/swapInput.scss
@@ -80,6 +80,7 @@
       text-overflow: ellipsis;
       appearance: textfield;
       -webkit-appearance: none;
+      width: 100%;
     }
 
     &__select {
